# cmrx-linux-target

./: .gitmodules  CMakeLists.txt  README.md
architecture/: amiga_intuition_guide.md  guest_os_virtualization_architecture.md
img/: bomb.xpm  browser.xpm  car-crash.xpm  irq_delay.xpm  key.xpm  logo.xpm  present.xpm  race_condition.xpm  stopwatch.xpm  terminal.xpm
src/: main.c
src/contraption/: CMakeLists.txt  README.md  api.c  api_priv.h  client.c  client.h  contraption.h  desktop.c  desktop.h  dock.c  dock_events.h  dock_win.c  dock_win.h  factory.h  gadget.c  gadget.h  keyboard.c  mouse.c  pixmap.c  pixmap.h  render.c  render.h  resources.c  resources.h  server.c  server.h  window.c  window.h
src/contraption/gadgets/: button.c  button.h  menuitem.c  menuitem.h  panel.c  panel.h  pixmap.c  pixmap.h  text.c  text.h  titlebar.c  titlebar.h
src/contraption/img/: cmrx-logo.xpm  green_pill.xpm  red_pill.xpm  silver_pill.xpm  window.xpm  yellow_pill.xpm
src/executable/: executable.h
src/fbdev/: CMakeLists.txt  README.md  fbdev.c  fbdev.h  fbdev_api.c  fbdev_impl.h  keyboard.c  keyboard.h  pointer.c  pointer.h
src/fbdev/fonts/: HackNerdMono14.c  HackNerdMono14.h  HackNerdMono14b.c  HackNerdMono14b.h  HackNerdMono14bi.c  HackNerdMono14bi.h  HackNerdMono14i.c  HackNerdMono14i.h  HackNerdMono32b.c  HackNerdMono32b.h  HackNerdMono64b.c  HackNerdMono64b.h  LiberationSans.c  LiberationSans14.c  NotoSans14.c  NotoSans14.h  NotoSans14b.c  NotoSans14b.h  NotoSans14bi.c  NotoSans14bi.h  NotoSans14i.c  NotoSans14i.h  Roboto32.c  Roboto32.h  Roboto32b.c  Roboto32b.h  Roboto48b.c  Roboto48b.h  RobotoBlack64b.c  RobotoBlack64b.h
src/fbdev/renderer/: README.md  config.h  text.c  text.h
src/icons/: CMakeLists.txt  icons.c  icons.h
src/init/: CMakeLists.txt  about_dlg.c  about_dlg.h  events.h  fuzzer.c  init.c  init_menu.c  init_menu.h  navigator_win.c  navigator_win.h  preferences_dlg.c  preferences_dlg.h  server.c  server.h
src/term/: CMakeLists.txt  events.h  term.c  term_menu.c  term_menu.h  term_win.c  term_win.h
src/util/: CMakeLists.txt  menus.c  menus.h  xpm.c  xpm.h
